2003-11-17  Paul Eggert  <eggert@twinsun.com>

	* README: Mention that S+T cannot overflow if S is the size of
	an existing object and T is sufficiently small.

2003-11-17  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf (Files): Add m4/ssize_t.m4.
	(Depends-on): Add xsize.

2003-11-12  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc (Files): Undo latest change, since xalloc.h
	no longer needs SIZE_MAX or PTRDIFF_MAX.

2003-11-11  Bruno Haible  <bruno@clisp.org>

	* modules/xsize (Files): Add m4/size_max.m4.
	* modules/xalloc (Files): Add m4/size_max.m4, m4/ptrdiff_max.m4.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* modules/xsize: New file.
	* modules/linebreak: Depend on xsize.
	* MODULES.html.sh (func_all_modules): Add xsize.

2003-11-04  Jim Meyering  <jim@meyering.net>

	* modules/sysexits: Use the `$(VAR)' notation for AC_SUBST'd
	variable names, rather than @VAR@.
	* modules/poll: Likewise.

2003-11-03  Jim Meyering  <jim@meyering.net>

	* modules/userspec (lib_SOURCES): Add userspec.h.
	(Include): Add "userspec.h".
	Improve description.

2003-10-29  Paul Eggert  <eggert@twinsun.com>

	* modules/group-member: Depend on stdbool.

2003-10-20  Bruno Haible  <bruno@clisp.org>

	* modules/wait-process: New file.
	* MODULES.html.sh (func_all_modules): Add wait-process.

2003-10-16  Paul Eggert  <eggert@twinsun.com>

	* README: Mention that gnulib assumes that (foo *) NULL + 0 == NULL.

2003-10-14  Bruno Haible  <bruno@clisp.org>

	* modules/fatal-signal: Add m4/sig_atomic_t.m4 to file list.

2003-10-12  Paul Eggert  <eggert@twinsun.com>

	* modules/xalloc: Do not depend on 'exit'.  Depend on 'stdbool'.
	Change maintainer from Bruno Haible to 'all'.

2003-10-10  Simon Josefsson  <jas@extundo.com>

	* modules/argp (Depends-on): Add restrict and strcase.

2003-10-08  Paul Eggert  <eggert@twinsun.com>

	* modules/getpass: Depend on stdbool.

2003-10-06  Bruno Haible  <bruno@clisp.org>

	* modules/version-etc-2: Remove file.